added few scraping functionalities
